--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.3",
     "express": "^4.18.2",
+    "gsap": "^3.12.5",
     "rxjs": "~7.8.0",
+    "swiper": "11.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
